# reciprocalspaceship

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Errors in the Complex Plane.ipynb  LICENSE  Lattice Smoothness.ipynb  MANIFEST.in  README.md  Simulate Delta F.ipynb  Structure Factors from Scratch.ipynb  crystal.py  documentation.html  genindex.html  index.html  installation.html  objects.inv  postBuild  py-modindex.html  pyproject.toml  reflectiontables.html  renovate.json  search.html  searchindex.js  setup.cfg  setup.py  symop.py  trivial.txt
_sources/: documentation.rst.txt  index.rst.txt
_static/: custom.css  documentation_options.js
api/: cifdump.html  index.html  mtzdump.html  reciprocalspaceship.DataSeries.html  reciprocalspaceship.DataSet.html  reflectiontables.html
data/: anomdiff.html
developers/: contributing.html  documentation.html  index.html  style.html  testing.html  utilities.html
docs/: Makefile  conf.py  documentation.rst  examples.rst  index.rst  reflectiontables.rst
examples/: 0_quickstart.html  0_quickstart.ipynb  1_basics.html  1_basics.ipynb  2_mergingstats.html  2_mergingstats.ipynb  3_anomalousdifference.html  3_anomalousdifference.ipynb  3_mergingerrormodel.html  3_mergingerrormodel.ipynb  4_anomalousmap.html  4_anomalousmap.ipynb  4_anomaloussites.html  4_timeresolvedPYP.html  4_timeresolvedPYP.ipynb  5_anomaloussites.html  5_anomaloussites.ipynb  5_timeresolvedPYP.html  6_timeresolvedPYP.html  7_makingADifferenceMap.html  7_makingADifferenceMap.ipynb  anomalousdifference.html  anomalousdifference.ipynb  basics.html  examples.html  gettingstarted.html  quickstart.html
reciprocalspaceship/: __init__.py  concat.py  crystal.py  dataseries.py  dataset.py  decorators.py
src/: uglymol.js
tests/: conftest.py  load_crystal_to_ipython.py  load_dataset_to_ipython.py  test_crystal.py  test_crystalseries.py  test_dataseries.py  test_dataset.py  test_decorators.py  (+14 more)
(+542 files in other folders)
